--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 .section {
     border: 5px solid #000;
-    background-color: #c0c0c0;
+    background-color: #d1d1c1;
     height: 100vh;
     overflow-y: auto;
 }
